--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/cashier": "^10.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^1.1"
+        "laravel/ui": "^1.1",
+        "spatie/laravel-stripe-webhooks": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
