--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
+        "laraveldaily/laravel-invoices": "^1.3",
         "spatie/laravel-stripe-webhooks": "^2.2"
     },
     "require-dev": {
